--- a/pages DS/AuthorPage.xaml
+++ b/pages DS/AuthorPage.xaml
@@ -9,28 +9,12 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AuthorPage" Background="White">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1.75*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Menu Grid.ColumnSpan="2">
-            <MenuItem Header="Delete Author" Click="onDelete_Click">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\cross_icon.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-            <MenuItem Header="Add new Author" Click="MenuItem_Click">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\add.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </Menu>
-        <DataGrid Grid.Row="1" Name="AuthorsDGr" Margin="8" SelectionChanged="onSelectedItemsChanged" />
-        <Grid Grid.Column="1" Grid.Row="1">
+        <DataGrid Name="AuthorsDGr" Margin="8" />
+        <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -47,23 +31,23 @@
             <TextBlock Grid.ColumnSpan="2" Padding="8" Text="Author info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
 
             <TextBlock Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
-            <TextBox Name="NameInput" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+            <TextBox TextChanged="OnSortingString_Changed" Name="NameInput" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
 
             <TextBlock Grid.Row="2" Text="Surname:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Name="SurnameInput" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <TextBox TextChanged="OnSortingString_Changed" Name="SurnameInput" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
 
             <TextBlock Grid.Row="3" Text="Patronymic:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Name="PatronymicInput" Grid.Column="1" Grid.Row="3" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <TextBox TextChanged="OnSortingString_Changed" Name="PatronymicInput" Grid.Column="1" Grid.Row="3" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
 
             <TextBlock Grid.Row="4" Text="Nickname:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Name="NicknameInput" Grid.Column="1" Grid.Row="4" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <TextBox TextChanged="OnSortingString_Changed" Name="NicknameInput" Grid.Column="1" Grid.Row="4" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
 
 
             <TextBlock Text="Age:" Grid.Row="5" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
-            <TextBox Name="AgeInput" Grid.Column="1" Grid.Row="5" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150" >
+            <TextBox TextChanged="OnSortingString_Changed" Name="AgeInput" Grid.Column="1" Grid.Row="5" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150" >
             </TextBox>
 
-            <Button Content="Save changes" Grid.Row="6" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="8" Click="OnSaveChanges_Click"/>
+            <Button Content="Clear filter" Click="OnClearFilter_Click" Grid.Row="6" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="8"/>
         </Grid>
     </Grid>
 </Page>
