--- a/pages DS/EpisodePage.xaml
+++ b/pages DS/EpisodePage.xaml
@@ -16,19 +16,7 @@
             <ColumnDefinition Width="1.75*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Menu Grid.ColumnSpan="2">
-            <MenuItem Header="Delete Episode" Click="onDeleteEpisode_Click">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\cross_icon.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-            <MenuItem Header="Add new Episode" Click="MenuItem_Click">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\add.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </Menu>
-        <DataGrid Grid.Row="1" Name="EpisodesDGr" Margin="8" SelectionChanged="onSelectedEpisodeChanged"/>
+        <DataGrid Grid.Row="1" Name="EpisodesDGr" Margin="8"/>
         <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition/>
@@ -45,19 +33,19 @@
             <TextBlock Grid.ColumnSpan="2" Padding="8" Text="Episode info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
 
             <TextBlock Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
-            <TextBox Name="NameInput" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+            <TextBox Name="NameInput" TextChanged="OnSortingText_Changed" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
 
             <TextBlock Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Name="DescriptionInput" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <TextBox Name="DescriptionInput" TextChanged="OnSortingText_Changed" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
 
             <TextBlock Grid.Row="4" Text="Podcast ID:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <ComboBox ItemTemplate="{StaticResource ResourceKey=PodcastComboBoxDataTemplate}" Name="PodcastIDSelector" Margin="8" Grid.Column="1" Grid.Row="4"/>
+            <ComboBox ItemTemplate="{StaticResource ResourceKey=PodcastComboBoxDataTemplate}" SelectionChanged="OnSelectedPodcast_Changed" Name="PodcastIDSelector" Margin="8" Grid.Column="1" Grid.Row="4"/>
 
 
             <TextBlock Text="Duration:" Grid.Row="3" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
-            <TextBox Name="DurationInput" Grid.Column="1" Grid.Row="3" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <TextBox Name="DurationInput" TextChanged="OnSortingText_Changed" Grid.Column="1" Grid.Row="3" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
 
-            <Button Content="Save changes" Grid.Row="6" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="8" Click="OnSaveChanges_Click"/>
+            <Button Content="Clear filter" Click="OnClearFilter_Click" Grid.Row="6" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="8" />
         </Grid>
     </Grid>
 </Page>
