--- a/pages_EF/EpisodePage.xaml
+++ b/pages_EF/EpisodePage.xaml
@@ -7,7 +7,7 @@
       xmlns:rules="clr-namespace:Practice4.Rules"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="EpisodePage" Background="White" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=podcastsVM}">
+      Title="EpisodePage" Background="White" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=episodesVM}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -17,20 +17,8 @@
             <ColumnDefinition Width="1.75*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Menu Grid.ColumnSpan="2">
-            <MenuItem Header="Delete Episode" Command="{Binding deleteEpisodeCommand}" CommandParameter="{Binding ElementName=EpisodesDGr, Path=SelectedItem}">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\cross_icon.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-            <MenuItem Header="Add new Episode" Click="MenuItem_Click">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\add.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </Menu>
         <DataGrid Grid.Row="1" Name="EpisodesDGr" Margin="8" ItemsSource="{Binding Episodes}"/>
-        <Grid Grid.Column="1" Grid.Row="1" DataContext="{Binding ElementName=EpisodesDGr, Path=SelectedItem}">
+        <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -40,25 +28,29 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.ColumnSpan="2" Padding="8" Text="Episode info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
+            <TextBlock Grid.ColumnSpan="3" Padding="8" Text="Episode info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
 
-            <TextBlock Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
-            <TextBox Text="{Binding Path=Episode_Name}" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+            <CheckBox Name="NameSortEnable" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableNameSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1" Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
+            <TextBox Text="{Binding Path=CurrentNameSorting}" Grid.Column="2" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
 
-            <TextBlock Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Text="{Binding Path=Episode_Description}" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <CheckBox Name="DescriptionSortEnable" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableDescriptionSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1" Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
+            <TextBox Text="{Binding Path=CurrentDescriptionSorting}" Grid.Column="2" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
 
-            <TextBlock Grid.Row="4" Text="Podcast ID:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <ComboBox Name="PodcastIDSelector" SelectedItem="{Binding Podcast}" Margin="8" Grid.Column="1" Grid.Row="4" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.Podcasts}"/>
+            <CheckBox Name="PodcastSortEnable" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnablePodcastSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1" Grid.Row="4" Text="Podcast ID:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
+            <ComboBox Name="PodcastIDSelector" SelectedItem="{Binding CurrentPodcastSorting}" Margin="8" Grid.Column="2" Grid.Row="4" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.Podcasts}"/>
 
-
-            <TextBlock Text="Duration:" Grid.Row="3" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="3" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150">
+            <CheckBox Name="DurationSortEnable" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableDurationSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1"  Text="Duration:" Grid.Row="3" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
+            <TextBox Grid.Column="2" Grid.Row="3" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150">
                 <TextBox.Text>
-                    <Binding Path="Episode_Duration" UpdateSourceTrigger="PropertyChanged" NotifyOnValidationError="True">
+                    <Binding Path="CurrentDurationSorting" UpdateSourceTrigger="PropertyChanged" NotifyOnValidationError="True">
                         <Binding.ValidationRules>
                             <rules:DecimalDurationOnlyRule />
                             <ExceptionValidationRule />
@@ -67,7 +59,7 @@
                 </TextBox.Text>
             </TextBox>
 
-            <Button Content="Save changes" Grid.Row="6" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="8" Click="OnSaveChanges_Click"/>
+            <Button Content="Clear filters" Grid.Row="6" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="8" Command="{Binding clearFiltersCommand}" CommandParameter="{Binding ElementName=EpisodesDGr, Path=ItemsSource}" Click="Button_Click"/>
         </Grid>
     </Grid>
 </Page>
