--- a/pages_EF/PodcastsPage.xaml
+++ b/pages_EF/PodcastsPage.xaml
@@ -17,20 +17,8 @@
             <ColumnDefinition Width="1.75*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Menu Grid.ColumnSpan="2">
-            <MenuItem Header="Delete Podcast" Command="{Binding deletePodcastCommand}" CommandParameter="{Binding ElementName=PodcastsDGr, Path=SelectedItem}">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\cross_icon.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-            <MenuItem Header="Add new Podcast" Click="MenuItem_Click">
-                <MenuItem.Icon>
-                    <Image Source="\Icons\add.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
-        </Menu>
         <DataGrid Grid.Row="1" Name="PodcastsDGr" Margin="8" ItemsSource="{Binding Podcasts}"/>
-        <Grid Grid.Column="1" Grid.Row="1" DataContext="{Binding ElementName=PodcastsDGr, Path=SelectedItem}">
+        <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -39,17 +27,27 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.ColumnSpan="2" Padding="8" Text="Podcast info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
-            <TextBlock Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
-            <TextBox Text="{Binding Path=Podcast_Name}" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
-            <TextBlock Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Text="{Binding Path=Podcast_Description}" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
-            <TextBlock Grid.Row="3" Text="Author ID:" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
-            <ComboBox Name="AuthorID_Selection" Grid.Column="1" Grid.Row="3" SelectedItem="{Binding Author}" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.Authors}" Margin="8"/>
-            <Button Content="Save changes" Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="8" Click="OnSaveChanges_Click"/>
+            
+            <TextBlock Grid.ColumnSpan="3" Padding="8" Text="Podcast info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
+
+            <CheckBox Name="NameSortEnable" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableNameSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1" Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
+            <TextBox Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+
+            <CheckBox Name="DescriptionSortEnable" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableDescriptionSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1" Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
+            <TextBox Text="{Binding Path=CurrentDescriptionSorting, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+
+            <CheckBox Name="AuthorSortEnable" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableAuthorSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
+            <TextBlock Grid.Column="1" Grid.Row="3" Text="Author ID:" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
+            <ComboBox Name="AuthorID_Selection" Grid.Column="2" Grid.Row="3" SelectedItem="{Binding CurrentAuthorSorting, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="AuthorID_Selection_SelectionChanged" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.Authors}" Margin="8"/>
+           
+            <Button Content="Clear filters" Grid.Row="4" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="8" Command="{Binding clearAlbumsFilterCommand}" CommandParameter="{Binding ElementName=PodcastsDGr, Path=ItemsSource}" Click="Button_Click"/>
+            
         </Grid>
     </Grid>
 </Page>
