--- a/pages DS/EpisodePage.xaml
+++ b/pages DS/EpisodePage.xaml
@@ -33,10 +33,25 @@
             <TextBlock Grid.ColumnSpan="2" Padding="8" Text="Episode info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
 
             <TextBlock Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
-            <TextBox Name="NameInput" TextChanged="OnSortingText_Changed" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+            <TextBox Name="NameInput" TextChanged="OnSortingText_Changed" Margin="8" FontSize="16" FontFamily="Sans"/>
+                <ComboBox Name="NameSelection" SelectionChanged="OnSelectedFilter_Changed" Grid.Row="1" DisplayMemberPath="Episode_Name"/>
+            </Grid>
 
             <TextBlock Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Name="DescriptionInput" TextChanged="OnSortingText_Changed" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <Grid Grid.Column="1" Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+            <TextBox Name="DescriptionInput" TextChanged="OnSortingText_Changed" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+                <ComboBox Name="DescriptionSelection" SelectionChanged="OnSelectedFilter_Changed" Grid.Row="1" DisplayMemberPath="Episode_Description"/>
+            </Grid>
+
 
             <TextBlock Grid.Row="4" Text="Podcast ID:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
             <ComboBox ItemTemplate="{StaticResource ResourceKey=PodcastComboBoxDataTemplate}" SelectionChanged="OnSelectedPodcast_Changed" Name="PodcastIDSelector" Margin="8" Grid.Column="1" Grid.Row="4"/>
