--- a/pages_EF/AlbumsPage.xaml
+++ b/pages_EF/AlbumsPage.xaml
@@ -38,7 +38,14 @@
                 <CheckBox Name="NameSortEnable" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableNameSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
                 <TextBlock Text="Name:" FontSize="16" Grid.Column="1" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
             </Grid>
-            <TextBox Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+            <Grid Grid.Column="2" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBox Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans"/>
+                <ComboBox Name="NameSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentNameFilter}" Grid.Row="1" />
+            </Grid>
 
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
@@ -48,7 +55,14 @@
                 <CheckBox Name="DescriptionSortEnable" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableDescriptionSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
             <TextBlock Grid.Column="1" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
             </Grid>
-            <TextBox Text="{Binding Path=CurrentDescriptionSorting, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <Grid Grid.Column="2" Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBox Text="{Binding Path=CurrentDescriptionSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8,8,8,8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+                <ComboBox Name="DescriptionSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentDescriptionFilter}" Grid.Row="1"/>
+            </Grid>
 
             <Grid Grid.Row="3">
                 <Grid.ColumnDefinitions>
