--- a/pages_EF/PodcastsPage.xaml
+++ b/pages_EF/PodcastsPage.xaml
@@ -31,23 +31,37 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            
+
             <TextBlock Grid.ColumnSpan="3" Padding="8" Text="Podcast info" HorizontalAlignment="Center" FontSize="20" FontFamily="Sans" FontWeight="Bold"/>
 
             <CheckBox Name="NameSortEnable" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableNameSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
             <TextBlock Grid.Column="1" Grid.Row="1" Text="Name:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center"/>
-            <TextBox Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="1" Margin="8" FontSize="16" FontFamily="Sans"/>
+            <Grid Grid.Column="2" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBox Text="{Binding Path=CurrentNameSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8" FontSize="16" FontFamily="Sans"/>
+                <ComboBox Name="NameSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentNameFilter}" Grid.Row="1" />
+            </Grid>
 
             <CheckBox Name="DescriptionSortEnable" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableDescriptionSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
             <TextBlock Grid.Column="1" Grid.Row="2" Text="Description:" FontSize="16" FontFamily="Sans" Padding="8" TextAlignment="Center" />
-            <TextBox Text="{Binding Path=CurrentDescriptionSorting, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="2" Margin="8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+            <Grid Grid.Column="2" Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBox Text="{Binding Path=CurrentDescriptionSorting, UpdateSourceTrigger=PropertyChanged}" Margin="8,8,8,8" FontSize="16" FontFamily="Sans" TextWrapping="Wrap" MaxHeight="150"/>
+                <ComboBox Name="DescriptionSelection" SelectionChanged="OnSelectedFilter_Changed" SelectedItem="{Binding CurrentDescriptionFilter}" Grid.Row="1"/>
+            </Grid>
 
             <CheckBox Name="AuthorSortEnable" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12" Command="{Binding changeEnableAuthorSortCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=IsChecked}" />
             <TextBlock Grid.Column="1" Grid.Row="3" Text="Author ID:" FontSize="16" FontFamily="Sans" Padding="8"  TextAlignment="Center"/>
             <ComboBox Name="AuthorID_Selection" Grid.Column="2" Grid.Row="3" SelectedItem="{Binding CurrentAuthorSorting, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="AuthorID_Selection_SelectionChanged" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.Authors}" Margin="8"/>
-           
+
             <Button Content="Clear filters" Grid.Row="4" Grid.ColumnSpan="3" VerticalAlignment="Center" Margin="8" Command="{Binding clearAlbumsFilterCommand}" CommandParameter="{Binding ElementName=PodcastsDGr, Path=ItemsSource}" Click="Button_Click"/>
-            
+
         </Grid>
     </Grid>
 </Page>
